Composite Databases ()
Surface for composite databases which are a collection of database aliases (local or remote) that can be queried using fabric semantics.

Introduces:
CREATE COMPOSITE DATABASE
DROP COMPOSITE DATABASE 
and updates many commands to handle namespaced aliases. 

This also introduces namespaces for database aliases such that all the aliases within a composite share a namespace distinct from regular databases (and aliases) and other composite databases.